Added checkout and confirmation page